test: move to junit 5