@@ -1,8 +1,8 @@
 package org.openzal.zal;
 
-import org.junit.Assert;
-import org.junit.BeforeClass;
-import org.junit.Test;
+import org.junit.jupiter.api.Assertions;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
 import org.openzal.zal.LdapToSearchParamsConverter.LdapQueryVisitorConverter;
 
 import java.util.Arrays;
@@ -17,7 +17,7 @@ public class LdapToSearchParamsConverterTest {
 
     private static Map<String, Collection<String>> conversionMap;
 
-    @BeforeClass
+    @BeforeAll
     public static void setup() {
         conversionMap = new HashMap<String, Collection<String>>() {{
             put("displayName", new TreeSet<>(Arrays.asList("displayName1", "displayName2", "displayName3")));
@@ -32,7 +32,7 @@ public class LdapToSearchParamsConverterTest {
         String convert = LdapToSearchParamsConverter.convertToQueryString(
                 "(!(displayName=*a*))"
         );
-        Assert.assertEquals("(NOT FIELD[displayName]:*a*)", convert);
+        Assertions.assertEquals("(NOT FIELD[displayName]:*a*)", convert);
     }
 
     @Test
@@ -40,7 +40,7 @@ public class LdapToSearchParamsConverterTest {
         String convert = LdapToSearchParamsConverter.convertToQueryString(
                 "(|(displayName=*a*)(display-name=*a*))"
         );
-        Assert.assertEquals("(FIELD[displayName]:*a* OR FIELD[display-name]:*a*)", convert);
+        Assertions.assertEquals("(FIELD[displayName]:*a* OR FIELD[display-name]:*a*)", convert);
     }
 
     @Test
@@ -48,7 +48,7 @@ public class LdapToSearchParamsConverterTest {
         String convert = LdapToSearchParamsConverter.convertToQueryString(
                 "(&(displayName=*a*)(display-name=*a*))"
         );
-        Assert.assertEquals("(FIELD[displayName]:*a* FIELD[display-name]:*a*)", convert);
+        Assertions.assertEquals("(FIELD[displayName]:*a* FIELD[display-name]:*a*)", convert);
     }
 
     @Test
@@ -56,7 +56,7 @@ public class LdapToSearchParamsConverterTest {
         String convert = LdapToSearchParamsConverter.convertToQueryString(
                 "(|(&(|(displayName=*a*)(display-name=*a*))(givenName=b))(title>=1))"
         );
-        Assert.assertEquals("(((FIELD[displayName]:*a* OR FIELD[display-name]:*a*) FIELD[givenName]:b) OR FIELD[title]>=1)", convert);
+        Assertions.assertEquals("(((FIELD[displayName]:*a* OR FIELD[display-name]:*a*) FIELD[givenName]:b) OR FIELD[title]>=1)", convert);
     }
 
     @Test
@@ -64,7 +64,7 @@ public class LdapToSearchParamsConverterTest {
         String convert = LdapToSearchParamsConverter.convertToQueryString(
                 "(&(|(displayName=*a*)(display-name=*a*))(|(givenName=b)(title>=1)))"
         );
-        Assert.assertEquals("((FIELD[displayName]:*a* OR FIELD[display-name]:*a*) (FIELD[givenName]:b OR FIELD[title]>=1))", convert);
+        Assertions.assertEquals("((FIELD[displayName]:*a* OR FIELD[display-name]:*a*) (FIELD[givenName]:b OR FIELD[title]>=1))", convert);
     }
 
     @Test
@@ -72,7 +72,7 @@ public class LdapToSearchParamsConverterTest {
         String convert = LdapToSearchParamsConverter.convertToQueryString(
                 "(&(|(&(displayName=*a*)(display-name=*a*))(givenName=b))(title>=1))"
         );
-        Assert.assertEquals("(((FIELD[displayName]:*a* FIELD[display-name]:*a*) OR FIELD[givenName]:b) FIELD[title]>=1)", convert);
+        Assertions.assertEquals("(((FIELD[displayName]:*a* FIELD[display-name]:*a*) OR FIELD[givenName]:b) FIELD[title]>=1)", convert);
     }
 
     @Test
@@ -80,7 +80,7 @@ public class LdapToSearchParamsConverterTest {
         String convert = LdapToSearchParamsConverter.convertToQueryString(
                 "(|(&(displayName=*a*)(display-name=*a*))(&(givenName=b)(title>=1)))"
         );
-        Assert.assertEquals("((FIELD[displayName]:*a* FIELD[display-name]:*a*) OR (FIELD[givenName]:b FIELD[title]>=1))", convert);
+        Assertions.assertEquals("((FIELD[displayName]:*a* FIELD[display-name]:*a*) OR (FIELD[givenName]:b FIELD[title]>=1))", convert);
     }
 
     @Test
@@ -88,49 +88,49 @@ public class LdapToSearchParamsConverterTest {
         String convert = LdapToSearchParamsConverter.convertToQueryString(
                 "(&(&(&(&(&(&(&(&(|(displayName=*a*)(display-name=*a*))(givenName=*b*))(sn=*c*))(title=*d*))(|(uid=*e*)(mailNickname=*e*)))(company=*f*))(mail=*g*))(|(physicalDeliveryOfficeName=*h*)(roomNumber=*h*)))(department=*i*))"
         );
-        Assert.assertEquals("(((((((((FIELD[displayName]:*a* OR FIELD[display-name]:*a*) FIELD[givenName]:*b*) FIELD[sn]:*c*) FIELD[title]:*d*) "
+        Assertions.assertEquals("(((((((((FIELD[displayName]:*a* OR FIELD[display-name]:*a*) FIELD[givenName]:*b*) FIELD[sn]:*c*) FIELD[title]:*d*) "
                 + "(FIELD[uid]:*e* OR FIELD[mailNickname]:*e*)) FIELD[company]:*f*) FIELD[mail]:*g*) (FIELD[physicalDeliveryOfficeName]:*h* "
                 + "OR FIELD[roomNumber]:*h*)) FIELD[department]:*i*)", convert);
     }
 
-    @Test(expected = IllegalArgumentException.class)
+    @Test
     public void find_terms() {
         LdapQueryVisitorConverter ldapQueryVisitorConverter = new LdapQueryVisitorConverter(Collections.emptyMap());
         List<Pair<Integer, Integer>> subterms = ldapQueryVisitorConverter.findOrSubTerms("()()()");
-        Assert.assertEquals(3, subterms.size());
-        Assert.assertEquals(0, subterms.get(0).getFirst().intValue());
-        Assert.assertEquals(1, subterms.get(0).getSecond().intValue());
-        Assert.assertEquals(2, subterms.get(1).getFirst().intValue());
-        Assert.assertEquals(3, subterms.get(1).getSecond().intValue());
-        Assert.assertEquals(4, subterms.get(2).getFirst().intValue());
-        Assert.assertEquals(5, subterms.get(2).getSecond().intValue());
+        Assertions.assertEquals(3, subterms.size());
+        Assertions.assertEquals(0, subterms.get(0).getFirst().intValue());
+        Assertions.assertEquals(1, subterms.get(0).getSecond().intValue());
+        Assertions.assertEquals(2, subterms.get(1).getFirst().intValue());
+        Assertions.assertEquals(3, subterms.get(1).getSecond().intValue());
+        Assertions.assertEquals(4, subterms.get(2).getFirst().intValue());
+        Assertions.assertEquals(5, subterms.get(2).getSecond().intValue());
         subterms = ldapQueryVisitorConverter.findOrSubTerms("(()(())())");
-        Assert.assertEquals(1, subterms.size());
-        Assert.assertEquals(0, subterms.get(0).getFirst().intValue());
-        Assert.assertEquals(9, subterms.get(0).getSecond().intValue());
+        Assertions.assertEquals(1, subterms.size());
+        Assertions.assertEquals(0, subterms.get(0).getFirst().intValue());
+        Assertions.assertEquals(9, subterms.get(0).getSecond().intValue());
         subterms = ldapQueryVisitorConverter.findOrSubTerms("()(())((()))");
-        Assert.assertEquals(3, subterms.size());
-        Assert.assertEquals(0, subterms.get(0).getFirst().intValue());
-        Assert.assertEquals(1, subterms.get(0).getSecond().intValue());
-        Assert.assertEquals(2, subterms.get(1).getFirst().intValue());
-        Assert.assertEquals(5, subterms.get(1).getSecond().intValue());
-        Assert.assertEquals(6, subterms.get(2).getFirst().intValue());
-        Assert.assertEquals(11, subterms.get(2).getSecond().intValue());
-        ldapQueryVisitorConverter.findOrSubTerms("(()()");
+        Assertions.assertEquals(3, subterms.size());
+        Assertions.assertEquals(0, subterms.get(0).getFirst().intValue());
+        Assertions.assertEquals(1, subterms.get(0).getSecond().intValue());
+        Assertions.assertEquals(2, subterms.get(1).getFirst().intValue());
+        Assertions.assertEquals(5, subterms.get(1).getSecond().intValue());
+        Assertions.assertEquals(6, subterms.get(2).getFirst().intValue());
+        Assertions.assertEquals(11, subterms.get(2).getSecond().intValue());
+        Assertions.assertThrows(IllegalArgumentException.class, () -> ldapQueryVisitorConverter.findOrSubTerms("(()()"));
     }
 
     @Test
     public void parse_simple_not_with_map() {
         String convert = LdapToSearchParamsConverter.convertToQueryString(conversionMap,"(!(displayName=*a*))"
         );
-        Assert.assertEquals("(NOT (FIELD[displayName1]:*a* OR FIELD[displayName2]:*a* OR FIELD[displayName3]:*a*))", convert);
+        Assertions.assertEquals("(NOT (FIELD[displayName1]:*a* OR FIELD[displayName2]:*a* OR FIELD[displayName3]:*a*))", convert);
     }
 
     @Test
     public void parse_simple_or_with_map() {
         String convert = LdapToSearchParamsConverter.convertToQueryString(conversionMap, "(|(displayName=*a*)(display-name=*a*))"
         );
-        Assert.assertEquals("((FIELD[displayName1]:*a* OR FIELD[displayName2]:*a* OR FIELD[displayName3]:*a*) OR "
+        Assertions.assertEquals("((FIELD[displayName1]:*a* OR FIELD[displayName2]:*a* OR FIELD[displayName3]:*a*) OR "
                 + "(FIELD[display-name1]:*a* OR FIELD[display-name2]:*a* OR FIELD[display-name3]:*a*))", convert);
     }
 
@@ -138,7 +138,7 @@ public class LdapToSearchParamsConverterTest {
     public void parse_simple_and_with_map() {
         String convert = LdapToSearchParamsConverter.convertToQueryString(conversionMap,"(&(displayName=*a*)(display-name=*a*))"
         );
-        Assert.assertEquals("((FIELD[displayName1]:*a* OR FIELD[displayName2]:*a* OR FIELD[displayName3]:*a*) "
+        Assertions.assertEquals("((FIELD[displayName1]:*a* OR FIELD[displayName2]:*a* OR FIELD[displayName3]:*a*) "
                 + "(FIELD[display-name1]:*a* OR FIELD[display-name2]:*a* OR FIELD[display-name3]:*a*))", convert);
     }
 
@@ -146,7 +146,7 @@ public class LdapToSearchParamsConverterTest {
     public void parse_or_and_or_1_with_map() {
         String convert = LdapToSearchParamsConverter.convertToQueryString(conversionMap, "(|(&(|(displayName=*a*)(display-name=*a*))(givenName=b))(title>=1))"
         );
-        Assert.assertEquals("((((FIELD[displayName1]:*a* OR FIELD[displayName2]:*a* OR FIELD[displayName3]:*a*) OR "
+        Assertions.assertEquals("((((FIELD[displayName1]:*a* OR FIELD[displayName2]:*a* OR FIELD[displayName3]:*a*) OR "
                 + "(FIELD[display-name1]:*a* OR FIELD[display-name2]:*a* OR FIELD[display-name3]:*a*)) "
                 + "(FIELD[givenName1]:b OR FIELD[givenName2]:b OR FIELD[givenName3]:b)) OR "
                 + "(FIELD[title1]>=1 OR FIELD[title2]>=1 OR FIELD[title3]>=1))", convert);
@@ -156,7 +156,7 @@ public class LdapToSearchParamsConverterTest {
     public void parse_or_and_or_2_with_map() {
         String convert = LdapToSearchParamsConverter.convertToQueryString(conversionMap, "(&(|(displayName=*a*)(display-name=*a*))(|(givenName=b)(title>=1)))"
         );
-        Assert.assertEquals("(((FIELD[displayName1]:*a* OR FIELD[displayName2]:*a* OR FIELD[displayName3]:*a*) OR "
+        Assertions.assertEquals("(((FIELD[displayName1]:*a* OR FIELD[displayName2]:*a* OR FIELD[displayName3]:*a*) OR "
                 + "(FIELD[display-name1]:*a* OR FIELD[display-name2]:*a* OR FIELD[display-name3]:*a*)) "
                 + "((FIELD[givenName1]:b OR FIELD[givenName2]:b OR FIELD[givenName3]:b) OR "
                 + "(FIELD[title1]>=1 OR FIELD[title2]>=1 OR FIELD[title3]>=1)))", convert);
@@ -166,7 +166,7 @@ public class LdapToSearchParamsConverterTest {
     public void parse_and_or_and_1_with_map() {
         String convert = LdapToSearchParamsConverter.convertToQueryString(conversionMap, "(&(|(&(displayName=*a*)(display-name=*a*))(givenName=b))(title>=1))"
         );
-        Assert.assertEquals("((((FIELD[displayName1]:*a* OR FIELD[displayName2]:*a* OR FIELD[displayName3]:*a*) "
+        Assertions.assertEquals("((((FIELD[displayName1]:*a* OR FIELD[displayName2]:*a* OR FIELD[displayName3]:*a*) "
                 + "(FIELD[display-name1]:*a* OR FIELD[display-name2]:*a* OR FIELD[display-name3]:*a*)) OR "
                 + "(FIELD[givenName1]:b OR FIELD[givenName2]:b OR FIELD[givenName3]:b)) "
                 + "(FIELD[title1]>=1 OR FIELD[title2]>=1 OR FIELD[title3]>=1))", convert);
@@ -176,7 +176,7 @@ public class LdapToSearchParamsConverterTest {
     public void parse_and_or_and_2_with_map() {
         String convert = LdapToSearchParamsConverter.convertToQueryString(conversionMap, "(|(&(displayName=*a*)(display-name=*a*))(&(givenName=b)(title>=1)))"
         );
-        Assert.assertEquals("(((FIELD[displayName1]:*a* OR FIELD[displayName2]:*a* OR FIELD[displayName3]:*a*) "
+        Assertions.assertEquals("(((FIELD[displayName1]:*a* OR FIELD[displayName2]:*a* OR FIELD[displayName3]:*a*) "
                 + "(FIELD[display-name1]:*a* OR FIELD[display-name2]:*a* OR FIELD[display-name3]:*a*)) OR "
                 + "((FIELD[givenName1]:b OR FIELD[givenName2]:b OR FIELD[givenName3]:b) "
                 + "(FIELD[title1]>=1 OR FIELD[title2]>=1 OR FIELD[title3]>=1)))", convert);
@@ -187,14 +187,14 @@ public class LdapToSearchParamsConverterTest {
         String convert = LdapToSearchParamsConverter.convertToQueryString(
                 "(objectClass=*)"
         );
-        Assert.assertEquals("(FIELD[zimbraCalResType]:location OR FIELD[zimbraCalResType]:equipment OR "
+        Assertions.assertEquals("(FIELD[zimbraCalResType]:location OR FIELD[zimbraCalResType]:equipment OR "
                         + "FIELD[type]:group OR FIELD[firstName]:* OR FIELD[lastName]:* OR FIELD[fullName]:* OR FIELD[zimbraId]:*)",
                 convert);
 
         convert = LdapToSearchParamsConverter.convertToQueryString(
                 "(objectClass=a)"
         );
-        Assert.assertEquals("(FIELD[zimbraCalResType]:location OR FIELD[zimbraCalResType]:equipment OR "
+        Assertions.assertEquals("(FIELD[zimbraCalResType]:location OR FIELD[zimbraCalResType]:equipment OR "
                         + "FIELD[type]:group OR FIELD[firstName]:* OR FIELD[lastName]:* OR FIELD[fullName]:* OR FIELD[zimbraId]:*)",
                 convert);
     }
